feat: return elements that contain e first